Format the document to a decent layout

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,2 +1,12 @@
-<mat-toolbar>Toolbar placeholder</mat-toolbar>
-<textarea codeEditor></textarea>
+<div class="page-container">
+	<div class="game-container">
+		<mat-card class="panel-content"></mat-card>
+	</div>
+	<div class="panel-container">
+		<div id="code-panel" class="panel-container__panel--large">
+			<div class="panel-content">
+				<textarea codeEditor></textarea>
+			</div>
+		</div>
+	</div>
+</div>
