at a temporary state where I can generate words

--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -1,1 +1,8 @@
-<p>game-board works!</p>
+<mat-card>
+	<mat-card-title>Game Board</mat-card-title>
+	<mat-card-content>
+		<div *ngFor="let word of words">
+			{{ word }},
+		</div>
+	</mat-card-content>
+</mat-card>
