--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="page-container">
-	<div class="game-container">
-		<mat-card class="panel-content"></mat-card>
+	<div class="game-container panel-content">
+		<code-game-board></code-game-board>
 	</div>
 	<div class="panel-container">
 		<div id="code-panel" class="panel-container__panel--large">
