Get it generating 10 words out of the 100

--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -2,7 +2,7 @@
 	<mat-card-title>Game Board</mat-card-title>
 	<mat-card-content>
 		<div *ngFor="let word of words">
-			{{ word }},
+			"{{ word }}",
 		</div>
 	</mat-card-content>
 </mat-card>
