add header to code area

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -3,6 +3,7 @@
 		<code-game-board></code-game-board>
 	</div>
 	<div class="panel-container">
+		<h2 class="mat-h2 panel-header">Your Script</h2>
 		<div id="code-panel" class="panel-container__panel--large">
 			<div class="panel-content">
 				<textarea codeEditor></textarea>
