--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -1,7 +1,10 @@
 <mat-card>
 	<mat-card-title>Game Board</mat-card-title>
-	<mat-card-subtitle>Provided Codes</mat-card-subtitle>
 	<mat-card-content>
+		<div class="header-container">
+			<div class="header">Codes</div>
+			<div class="header">Guesses</div>
+		</div>
 		<div class="code-guess-container">
 			<div class="code-guess__wrapper">
 				<div class="code-guess" *ngFor="let code of codes">
