--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -22,3 +22,15 @@
 	margin-bottom: 15px;
 	width: 100%;
 }
+
+.header-container {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 15px;
+	border-bottom: 1px solid #9E9E9E;
+}
+
+.header {
+	display: flex;
+	font-weight: 700;
+}
