--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -11,6 +11,13 @@
 	width: 100%;
 	height: 100%;
 	min-width: 500px;
+	flex-direction: column;
+}
+
+.panel-header {
+	margin-top: 15px;
+	margin-left: 15px;
+	margin-bottom: 0;
 }
 
 .panel-content {
