--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="card mat-elevation-z8">
 	<mat-card-title>Game Board</mat-card-title>
 	<mat-card-content>
 		<div class="header-container">
@@ -13,5 +13,10 @@
 				</div>
 			</div>
 		</div>
+	</mat-card-content>
+</mat-card>
+<mat-card class="card mat-elevation-z8">
+	<mat-card-content>
+		Score: {{score}}
 	</mat-card-content>
 </mat-card>
