--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -6,7 +6,7 @@
 		<h2 class="mat-h2 panel-header">Your Script</h2>
 		<div id="code-panel" class="panel-container__panel--large">
 			<div class="panel-content">
-				<textarea></textarea>
+				<textarea codeEditor></textarea>
 			</div>
 		</div>
 	</div>
