make docs better

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar>
 	<div class="nav-item">Code-Breaker Coding Challenge</div>
 	<a mat-button routerLink="" class="nav-item">Home</a>
+	<a mat-button routerLink="docs" class="nav-item">Documentation</a>
 	<a mat-button routerLink="leaderboard" class="nav-item">Leaderboard</a>
 	<a mat-button routerLink="multiplayer" class="nav-item">Multiplayer</a>
 </mat-toolbar>
