--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -3,7 +3,7 @@
 	<mat-card-content>
 		<div class="header-container">
 			<div class="header">Codes</div>
-			<div class="header">Guesses</div>
+			<div class="header">Is Guessed?</div>
 		</div>
 		<div class="code-guess-container">
 			<div class="code-guess__wrapper">
