--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -23,3 +23,4 @@
 	</mat-card-content>
 </mat-card>
 <button mat-raised-button color="primary" (click)="start()">Start</button>
+<button mat-raised-button color="secondary" (click)="setScript()">Set Script</button>
