fix mobile styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="nav-item-container">
 	<div class="nav-item">Code-Breaker Coding Challenge</div>
 	<a mat-button routerLink="" class="nav-item">Home</a>
 	<a mat-button routerLink="docs" class="nav-item">Documentation</a>
