--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -25,9 +25,12 @@
 }
 
 .game-container {
-	width: 200px;
-	min-width: 200px;
-	max-width: 200px;
+	width: 250px;
+	min-width: 250px;
+	max-width: 250px;
+	height: 500px;
+	max-height: 500px;
+	min-height: 500px;
 }
 
 .panel-container__panel--small {
