--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -1,5 +1,9 @@
 .code-guess-container {
 	display: flex;
+	height: 400px;
+	max-height: 400px;
+	min-height: 400px;
+	overflow-y: auto;
 }
 
 .code-guess__wrapper {
@@ -7,7 +11,6 @@
 	flex-direction: column;
 	flex-grow: 1;
 	align-items: center;
-	justify-content: space-around;
 	> div {
 		border-bottom: 1px solid #E0E0E0;
 	}
