--- a/src/app/docs-page/docs-page.component.html
+++ b/src/app/docs-page/docs-page.component.html
@@ -21,7 +21,7 @@ Your code must be in the following syntax in order to work:
 
 <p class="mat-body">All built-in game state variables are backed up prior to, and restored after, your function runs. This prevents tampering.</p>
 
-<h2>"Likeness"</h2>
+<h2 class="mat-h2">"Likeness"</h2>
 
 <p class="mat-body">A word's likeness is determined by whether or not the string's individual character values of the word match with the answer word's values in both index of the string, and in character value.</p>
 
