--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -3,6 +3,9 @@
 	height: 400px;
 	max-height: 400px;
 	min-height: 400px;
+	width: 250px;
+    min-width: 250px;
+    max-width: 250px;
 	overflow-y: auto;
 }
 
