--- a/src/app/multiplayer-page/multiplayer-page.component.scss
+++ b/src/app/multiplayer-page/multiplayer-page.component.scss
@@ -2,3 +2,11 @@
     margin-top: 15px;
     min-width: 1200px;
 }
+
+.start-container {
+    margin-top: 15px;
+    margin-left: 15px;
+    > * {
+        margin-right: 15px;
+    }
+}
