get the games running

--- a/src/app/multiplayer-page/multiplayer-page.component.html
+++ b/src/app/multiplayer-page/multiplayer-page.component.html
@@ -20,9 +20,9 @@
     </mat-form-field>
 </div>
 <mat-grid-list class="list" cols="4" rowHeight="600px">
-    <ng-container *ngIf="players$ | async as players">
-        <mat-grid-tile *ngFor="let p of players">
-            <code-game-board [isSinglePlayer]="false"></code-game-board>
+    <ng-container *ngIf="games$ | async as games">
+        <mat-grid-tile *ngFor="let g of games">
+            <code-game-board [isSinglePlayer]="false" [results]="g.guessResults$" [score]="games.score$"></code-game-board>
         </mat-grid-tile>
     </ng-container>
 </mat-grid-list>
