--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="page-container">
 	<div class="game-container panel-content">
-		<code-game-board></code-game-board>
+		<code-game-board [results]="guessResults$" [score]="score$"></code-game-board>
 	</div>
 	<div class="panel-container">
 		<div class="header-container">
