--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -19,7 +19,7 @@
 </mat-card>
 <mat-card class="card mat-elevation-z8">
 	<mat-card-content>
-		Score: {{score$ | async}}
+		Score: {{ score }}
 	</mat-card-content>
 </mat-card>
 <ng-container *ngIf="isSinglePlayer">
