add player name to scoreboard

--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card mat-elevation-z8">
-	<mat-card-title>Game Board</mat-card-title>
+	<mat-card-title>{{ title }}</mat-card-title>
 	<mat-card-content>
 		<div class="header-container">
 			<div class="header">Codes</div>
