--- a/src/app/multiplayer-page/multiplayer-page.component.html
+++ b/src/app/multiplayer-page/multiplayer-page.component.html
@@ -10,7 +10,7 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field>
-        <mat-label>Number of Game</mat-label>
+        <mat-label>Number of Games</mat-label>
         <mat-select [(value)]="numGames">
             <mat-option value="1">1</mat-option>
             <mat-option value="5">5</mat-option>
