--- a/src/app/leaderboard-page/leaderboard-page.component.html
+++ b/src/app/leaderboard-page/leaderboard-page.component.html
@@ -1,1 +1,17 @@
-<p>leaderboard-page works!</p>
+<table mat-table [dataSource]="dataSource | async" class="mat-elevation-z8 leaderboard">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="score">
+        <th mat-header-cell *matHeaderCellDef> Score </th>
+        <td mat-cell *matCellDef="let element"> {{element.score}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="displayName">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
